[package]
name = "hamr"
version = "0.1.0"
authors = [
"Emil Orvik Kollstrøm <e.kollstrom@gmail.com>",
"Ruben Svanåsbakken Sevaldson <r.sevaldson@gmail.com>"
]
edition = "2018"

[dependencies]
colored = "1.8" # Colors in the terminal
structopt = "0.2.10" # Parsing command line arguments
failure = "0.1.5" # Wrap an error and contain the original one
exitfailure = "0.5.1" # Make error types readable
